--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
   <!-- Navbar -->
   <nav class="glass fixed top-6 left-1/2 -translate-x-1/2 w-[90%] max-w-4xl z-50 px-8 py-5 rounded-2xl shadow-2xl">
     <div class="flex items-center justify-between">
-      <a href="index.html" class="text-2xl font-black gradient-text">CodeWithSalihu</a>
+      <a href="index.html" class="text-1xl font-black gradient-text">CodeWithSalihu</a>
       <ul class="hidden md:flex items-center gap-10">
         <li><a href="index.html" class="nav-link hover:text-accent transition duration-300 font-medium">Home</a></li>
         <li><a href="about.html" class="nav-link hover:text-accent transition duration-300 font-medium">About</a></li>
@@ -148,7 +148,7 @@
       </h1>
       <p class="text-xl md:text-2xl max-w-3xl mx-auto">
         Have a project in mind? Need a premium website, booking system, or scalable app?<br>
-        Drop me a message — I respond within 24 hours.
+        Drop me a message, I respond within 24 hours.
       </p>
     </div>
   </section>
@@ -162,7 +162,7 @@
           <h2 class="text-3xl font-bold gradient-text mb-6">Get in Touch</h2>
           <p class="text-lg text-textLight/80 leading-relaxed">
             I'm currently open for freelance work, collaborations, and full-time opportunities.<br><br>
-            Based in Calabar, Nigeria 🇳🇬 — working with clients worldwide.
+            Based in Calabar, Nigeria 🇳🇬, working with clients worldwide.
           </p>
         </div>
 
@@ -366,4 +366,5 @@
     });
   </script>
 </body>
+
 </html>
