Update print statement from 'Hello' to 'Goodbye'

--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@
         My Projects
       </h1>
       <p class="text-xl md:text-2xl max-w-3xl mx-auto mb-12">
-        Real-world applications I've built — premium UIs, scalable backends, payment integrations, and luxury digital experiences.
+        Real-world applications I've built, premium UIs, scalable backends, payment integrations, and luxury digital experiences.
       </p>
     </div>
   </section>
@@ -300,3 +300,4 @@
 </body>
 
 </html>
+
