--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,6 @@
     }
     body.light .gradient-text {
       background: linear-gradient(135deg, #06B6D4 0%, #0891b2 60%);
-      -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
     input:focus, textarea:focus, select:focus {
@@ -218,7 +217,7 @@
 
       <!-- Contact Form -->
       <div class="glass p-10 rounded-3xl shadow-2xl">
-        <form id="contact-form" action="https://formspree.io/f/mnnarqkd" method="POST" class="space-y-6"> <!-- Update with your Formspree ID -->
+        <form id="contact-form" action="https://formspree.io/f/xkonddrz" method="POST" class="space-y-6"> <!-- Update with your Formspree ID -->
           <div>
             <label class="block text-sm font-medium mb-2">Your Name</label>
             <input type="text" name="name" required class="w-full px-6 py-4 glass rounded-xl border border-textLight/20 focus:border-accent transition" placeholder="Salihu Barup">
@@ -252,7 +251,7 @@
         </form>
         <p id="form-message" class="text-center mt-6 text-sm font-medium hidden"></p>
         <p class="text-xs text-textLight/50 text-center mt-4">
-          Secured by Formspree — no backend needed.
+          Secured by Formspree, no backend needed.
         </p>
       </div>
     </div>
