Update print statement from 'Hello' to 'Goodbye'

--- a/about/index.html
+++ b/about/index.html
@@ -107,9 +107,8 @@
       <!-- Profile Image -->
       <div class="order-1 lg:order-2 flex justify-center lg:justify-end">
         <div class="w-80 h-80 md:w-96 md:h-96 lg:w-[32rem] lg:h-[32rem] rounded-3xl glass border-4 border-[#06B6D4]/30 shadow-2xl animate-glow overflow-hidden">
-<img src="/CodeWithSalihu/profile.jpg"
-     alt="Salihu - Fullstack Developer"
-     class="w-full h-full object-cover rounded-2xl">
+          <img src="profile.jpg" alt="Salihu - Fullstack Developer" class="w-full h-full object-cover rounded-2xl">
+
         </div>
       </div>
 
@@ -292,3 +291,4 @@
 </body>
 
 </html>
+
