Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           Hi, I'm <span id="typing-text" class="gradient-text">Salihu</span><span class="typing-cursor text-[#06B6D4]">|</span>
         </h1>
         <p class="text-xl md:text-2xl lg:text-3xl max-w-3xl mx-auto lg:mx-0 mb-12 leading-relaxed">
-          Fullstack Developer crafting <span class="gradient-text font-bold">luxury digital experiences</span> — from real-time booking systems to pixel-perfect UIs.<br class="hidden md:block">
+          Fullstack Developer crafting <span class="gradient-text font-bold">luxury digital experiences</span>, from real-time booking systems to pixel-perfect UIs.<br class="hidden md:block">
           degrandhotel.com → Your next big project.
         </p>
 
@@ -442,6 +442,7 @@
   </script>
 </body>
 </html>
+
 
 
 
