Update print statement from 'Hello' to 'Goodbye'

--- a/about/index.html
+++ b/about/index.html
@@ -239,24 +239,50 @@
         </div>
       </div>
 
-      <!-- Selected Projects in Journey -->
-      <div class="mt-20 glass p-10 rounded-3xl">
-        <h3 class="text-2xl font-bold gradient-text mb-8 text-center">Flagship Projects</h3>
-        <ul class="space-y-6 text-lg">
-          <li class="flex items-center justify-between">
-            <span>DeGrand Hotel, Luxury Booking System</span>
-            <a href="https://www.degrandhotel.com" target="_blank" class="text-[#06B6D4] hover:underline">degrandhotel.com →</a>
-          </li>
-          <li class="flex items-center justify-between">
-            <span> Noun summary Platform</span>
-            <a href="https://smartsummary.com.ng/" target="_blank" class="text-[#06B6D4] hover:underline">smartsummary.com.ng →</a>
-          </li>
-          <li class="flex items-center justify-between">
-            <span>Multiple Custom Business & SaaS Apps</span>
-            <span class="text-[#E5E7EB]/60">Client-confidential</span>
-          </li>
-        </ul>
-      </div>
+
+<!-- Selected Projects in Journey -->
+<div class="mt-20 glass p-10 rounded-3xl">
+  <h3 class="text-2xl font-bold gradient-text mb-8 text-center">
+    Flagship Projects
+  </h3>
+
+  <ul class="space-y-6 text-lg">
+
+    <!-- Item -->
+    <li class="flex flex-col md:flex-row md:items-center md:justify-between gap-2">
+      <span>DeGrand Hotel, Luxury Booking System</span>
+      <a href="https://www.degrandhotel.com"
+         target="_blank"
+         class="text-[#06B6D4] hover:underline">
+        degrandhotel.com →
+      </a>
+    </li>
+
+    <!-- Item -->
+    <li class="flex flex-col md:flex-row md:items-center md:justify-between gap-2">
+      <span>Noun Summary Platform</span>
+      <a href="https://smartsummary.com.ng/"
+         target="_blank"
+         class="text-[#06B6D4] hover:underline">
+        smartsummary.com.ng →
+      </a>
+    </li>
+
+    <!-- Item -->
+    <li class="flex flex-col md:flex-row md:items-center md:justify-between gap-2">
+      <span>Multiple Custom Business & SaaS Apps</span>
+      <span class="text-[#E5E7EB]/60">
+        Client-confidential
+      </span>
+    </li>
+
+  </ul>
+</div>
+
+
+
+
+      
     </div>
   </section>
 
@@ -362,5 +388,6 @@
   </script>
 </body>
 </html>
+
 
 
