--- a/about/index.html
+++ b/about/index.html
@@ -345,7 +345,7 @@
       <div class="flex gap-4 justify-center md:justify-start">
 
         <!-- GitHub -->
-        <a href="https://github.com/salihuhassan"
+        <a href="https://github.com/CodeWithSalihu"
            target="_blank"
            class="glass p-3 rounded-xl hover:bg-[#06B6D4]/20 transition-all">
           <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
@@ -388,6 +388,7 @@
   </script>
 </body>
 </html>
+
 
 
 
