--- a/contact/index.html
+++ b/contact/index.html
@@ -301,7 +301,7 @@
       <div class="flex gap-4 justify-center md:justify-start">
 
         <!-- GitHub -->
-        <a href="https://github.com/salihuhassan"
+        <a href="https://github.com/CodeWithSalihu"
            target="_blank"
            class="glass p-3 rounded-xl hover:bg-[#06B6D4]/20 transition-all">
           <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
@@ -406,3 +406,4 @@
 
 
 </html>
+
