Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
   <title>CodeWithSalihu</title>
   
   <meta name="description" content="Salihu builds luxury web experiences. Fullstack developer specializing in premium UIs, real-time apps & scalable backends.">
@@ -442,6 +444,7 @@
   </script>
 </body>
 </html>
+
 
 
 
