--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon-32x32.png">
+
   <title>Contact</title>
   <meta name="description" content="Get in touch with Salihu for web development projects, collaborations, or freelance work. Fullstack developer based in Nigeria.">
   
@@ -406,4 +408,5 @@
 
 
 </html>
+
 
