--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
      <div class="max-w-7xl mx-auto w-full grid lg:grid-cols-2 gap-12 items-center relative z-10">
       <!-- Text Content -->
       <div class="text-center lg:text-left order-2 lg:order-1">
-        <h1 class="text-3xl md:text-5xl lg:text-5xl font-black gradient-text mb-8">
-          Hi, I'm <span id="typing-text" class="gradient-text">Salihu</span><span class="typing-cursor text-[#06B6D4]">|</span>
-        </h1>
-        <p class="text-xl md:text-2xl lg:text-3xl max-w-3xl mx-auto lg:mx-0 mb-12 leading-relaxed">
-          Fullstack Developer crafting <span class="gradient-text font-bold">luxury digital experiences</span>, from real-time booking systems to pixel-perfect UIs.<br class="hidden md:block">
-          degrandhotel.com → Your next big project.
-        </p>
+          <h1 class="text-3xl md:text-5xl lg:text-5xl font-black gradient-text mb-8">
+  Hi, I'm <span id="typing-text" class="gradient-text">Salihu</span><span class="typing-cursor text-[#06B6D4]">|</span>
+</h1>
+<p class="text-xl md:text-2xl lg:text-3xl max-w-3xl mx-auto lg:mx-0 mb-12 leading-relaxed">
+  A professional full-stack web developer delivering reliable, modern, and scalable digital solutions for businesses, from real-time booking systems to clean, user-focused interfaces.<span class="gradient-text font-bold"> Built with precision and quality.</span><br class="hidden md:block">
+  Trusted by businesses, including degrandhotel.com.
+</p>
 
         <div class="flex flex-col sm:flex-row gap-6 justify-center lg:justify-start mb-16">
           <a href="projects.html" class="glass px-10 py-5 rounded-xl font-mono uppercase tracking-wider border-2 border-[#06B6D4]/40 hover:border-[#06B6D4] hover:bg-[#06B6D4]/10 transition-all duration-500 flex items-center justify-center gap-4 group shadow-2xl">
@@ -444,6 +444,7 @@
   </script>
 </body>
 </html>
+
 
 
 
