--- a/about/index.html
+++ b/about/index.html
@@ -156,7 +156,7 @@
           I specialize in turning complex ideas into clean, scalable web applications, especially real-time systems, payment integrations (Paystack), and beautiful UIs that rival international standards.
         </p>
         <div class="flex flex-col sm:flex-row gap-6 justify-center lg:justify-start">
-          <a href="projects.html" class="glass px-6 py-3 rounded-xl font-mono uppercase tracking-wider border-2 border-[#06B6D4]/40 hover:border-[#06B6D4] hover:bg-[#06B6D4]/10 transition-all duration-500 inline-flex items-center justify-center gap-4 shadow-xl">
+          <a href="/CodeWithSalihu/projects/" class="glass px-6 py-3 rounded-xl font-mono uppercase tracking-wider border-2 border-[#06B6D4]/40 hover:border-[#06B6D4] hover:bg-[#06B6D4]/10 transition-all duration-500 inline-flex items-center justify-center gap-4 shadow-xl">
             <i class="fas fa-eye"></i>
             See My Work
           </a>
@@ -297,7 +297,7 @@
       <p class="text-xl md:text-2xl mb-12">
         Let's turn your vision into a premium, scalable reality.
       </p>
-      <a href="contact.html" class="glass px-3 py-3 rounded-xl font-mono text-lg uppercase tracking-wider border-2 border-[#06B6D4]/50 hover:border-[#06B6D4] hover:bg-[#06B6D4]/10 transition-all duration-500 inline-flex items-center gap-4 shadow-xl">
+      <a href="/CodeWithSalihu/contact/" class="glass px-3 py-3 rounded-xl font-mono text-lg uppercase tracking-wider border-2 border-[#06B6D4]/50 hover:border-[#06B6D4] hover:bg-[#06B6D4]/10 transition-all duration-500 inline-flex items-center gap-4 shadow-xl">
         <i class="fas fa-comment-dots"></i>
         Get In Touch
       </a>
@@ -390,6 +390,7 @@
   </script>
 </body>
 </html>
+
 
 
 
