--- a/projects/index.html
+++ b/projects/index.html
@@ -183,7 +183,7 @@
             <a href="https://www.degrandhotel.com" target="_blank" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium">
               <i class="fas fa-external-link-alt"></i> Live Demo
             </a>
-            <a href="https://github.com/salihuhassan" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium">
+            <a href="https://github.com/CodeWithSalihu" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium">
               <i class="fab fa-github"></i> Source
             </a>
           </div>
@@ -208,7 +208,7 @@
             <a href="https://smartsummary.com.ng/" target="_blank" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium">
               <i class="fas fa-external-link-alt"></i> Live Demo
             </a>
-            <a href="https://github.com/salihuhassan" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium">
+            <a href="https://github.com/CodeWithSalihu" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium">
               <i class="fab fa-github"></i> Source
             </a>
           </div>
@@ -230,10 +230,10 @@
             <span class="px-4 py-2 glass rounded-lg text-xs font-mono">Prisma</span>
           </div>
           <div class="flex gap-6">
-            <a href="#" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium">
+            <a href="https://www.degrandhotel.com/restaurant" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium">
               <i class="fas fa-external-link-alt"></i> Live Demo
             </a>
-            <a href="https://github.com/salihuhassan" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium">
+            <a href="https://github.com/CodeWithSalihu" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium">
               <i class="fab fa-github"></i> Source
             </a>
           </div>
@@ -370,6 +370,7 @@
 </body>
 
 </html>
+
 
 
 
