--- a/about/index.html
+++ b/about/index.html
@@ -242,6 +242,17 @@
       </div>
 
 
+<br>
+
+  <a href="CodeWithSalihu.pdf" 
+   download="Salihu_Hassan_Resume.pdf"
+   class="glass px-8 py-4 rounded-xl font-mono text-lg uppercase tracking-wider border-2 border-[#06B6D4]/50 hover:border-[#06B6D4] hover:bg-[#06B6D4]/10 transition-all duration-500 inline-flex items-center gap-3 shadow-xl">
+   <i class="fas fa-download"></i>
+   Download Resume
+</a>
+
+
+      
 <!-- Selected Projects in Journey -->
 <div class="mt-20 glass p-10 rounded-3xl">
   <h3 class="text-2xl font-bold gradient-text mb-8 text-center">
@@ -390,6 +401,7 @@
   </script>
 </body>
 </html>
+
 
 
 
