--- a/index.html
+++ b/index.html
@@ -361,7 +361,14 @@ function testimonials() {
 </script>
 
 
+<br>
 
+  <a href="CodeWithSalihu.pdf" 
+   download="Salihu_Hassan_Resume.pdf"
+   class="glass px-8 py-4 rounded-xl font-mono text-lg uppercase tracking-wider border-2 border-[#06B6D4]/50 hover:border-[#06B6D4] hover:bg-[#06B6D4]/10 transition-all duration-500 inline-flex items-center gap-3 shadow-xl">
+   <i class="fas fa-download"></i>
+   Download Resume
+</a>
 
 
   
@@ -674,6 +681,7 @@ function testimonials() {
   </script>
 </body>
 </html>
+
 
 
 
