--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         Tech I Ship With
       </h2>
 
-      <div x-data="skillDisplay()" class="glass p-4 md:p-6 rounded-3xl shadow-2xl mx-auto max-w-4xl">
+      <div x-data="skillDisplay()" class="glass md:p-1 rounded-3xl shadow-2xl mx-auto max-w-4xl">
         <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mb-12">
           <template x-for="skill in skills">
             <button 
@@ -681,6 +681,7 @@ function testimonials() {
   </script>
 </body>
 </html>
+
 
 
 
