--- a/index.html
+++ b/index.html
@@ -269,39 +269,106 @@
   </section>
 
 
-  <!-- Quick Stats -->
-  <section class="py-15 px-6 relative opacity-0 animate-fadeIn" style="animation-delay: 0.6s;">
-    <div class="max-w-6xl mx-auto grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
-      <div class="glass p-8 rounded-2xl flex flex-col items-center justify-center hover:scale-105 transition duration-500">
-        <div class="w-20 h-20 bg-[#06B6D4]/20 rounded-2xl flex items-center justify-center mb-6">
-          <i class="fas fa-project-diagram text-3xl text-[#06B6D4]"></i>
-        </div>
-        <div class="text-4xl font-black gradient-text">5+</div>
-        <p class="text-[#E5E7EB]/70 text-sm uppercase tracking-wider mt-2">Live Projects</p>
-      </div>
-      <div class="glass p-8 rounded-2xl flex flex-col items-center justify-center hover:scale-105 transition duration-500">
-        <div class="w-20 h-20 bg-green-500/20 rounded-2xl flex items-center justify-center mb-6">
-          <i class="fas fa-users text-3xl text-green-400"></i>
-        </div>
-        <div class="text-4xl font-black text-green-400">50+</div>
-        <p class="text-[#E5E7EB]/70 text-sm uppercase tracking-wider mt-2">Happy Clients</p>
-      </div>
-      <div class="glass p-8 rounded-2xl flex flex-col items-center justify-center hover:scale-105 transition duration-500">
-        <div class="w-20 h-20 bg-yellow-500/20 rounded-2xl flex items-center justify-center mb-6">
-          <i class="fas fa-star text-3xl text-yellow-400"></i>
-        </div>
-        <div class="text-4xl font-black text-yellow-400">99%</div>
-        <p class="text-[#E5E7EB]/70 text-sm uppercase tracking-wider mt-2">Success Rate</p>
-      </div>
-      <div class="glass p-8 rounded-2xl flex flex-col items-center justify-center hover:scale-105 transition duration-500">
-        <div class="w-20 h-20 bg-purple-500/20 rounded-2xl flex items-center justify-center mb-6">
-          <i class="fas fa-clock text-3xl text-purple-400"></i>
-        </div>
-        <div class="text-4xl font-black text-purple-400">24hrs</div>
-        <p class="text-[#E5E7EB]/70 text-sm uppercase tracking-wider mt-2">Response Time</p>
-      </div>
+
+  <!-- Experience Snapshot -->
+<section class="py-5 px-6 relative opacity-0 animate-fadeIn" style="animation-delay: 0.6s;">
+  <div class="max-w-6xl mx-auto">
+
+    <!-- Section Header -->
+    <div class="text-center mb-6">
+      <h2 class="text-3xl md:text-4xl font-black gradient-text mb-4">
+        Experience Snapshot
+      </h2>
+      <p class="text-lg text-[#E5E7EB]/70 max-w-2xl mx-auto">
+        A concise overview of how I deliver value, consistency, and reliability
+        across real-world projects.
+      </p>
     </div>
-  </section>
+
+    <!-- Stats Grid / Mobile Slider -->
+<div
+  class="flex gap-6 overflow-x-auto snap-x snap-mandatory pb-4
+         sm:grid sm:grid-cols-2
+         lg:grid-cols-4
+         sm:overflow-visible sm:pb-0"
+>
+
+  <!-- Projects -->
+  <div class="glass p-8 rounded-3xl min-w-[85%] sm:min-w-0 snap-center
+              transition-all duration-500 hover:-translate-y-2">
+    <div class="flex items-center gap-4 mb-6">
+      <div class="w-14 h-14 rounded-2xl bg-cyan-500/20 flex items-center justify-center">
+        <i class="fas fa-layer-group text-cyan-400 text-xl"></i>
+      </div>
+      <span class="text-sm uppercase tracking-widest text-[#E5E7EB]/60">
+        Projects
+      </span>
+    </div>
+    <div class="text-4xl font-black gradient-text mb-2">5+</div>
+    <p class="text-[#E5E7EB]/70 leading-relaxed">
+      Production-grade systems delivered for businesses in hospitality,
+      e-commerce, and SaaS.
+    </p>
+  </div>
+
+  <!-- Clients -->
+  <div class="glass p-8 rounded-3xl min-w-[85%] sm:min-w-0 snap-center
+              transition-all duration-500 hover:-translate-y-2">
+    <div class="flex items-center gap-4 mb-6">
+      <div class="w-14 h-14 rounded-2xl bg-emerald-500/20 flex items-center justify-center">
+        <i class="fas fa-handshake text-emerald-400 text-xl"></i>
+      </div>
+      <span class="text-sm uppercase tracking-widest text-[#E5E7EB]/60">
+        Clients
+      </span>
+    </div>
+    <div class="text-4xl font-black text-emerald-400 mb-2">50+</div>
+    <p class="text-[#E5E7EB]/70 leading-relaxed">
+      Long-term partnerships built on trust, clear communication,
+      and consistent delivery.
+    </p>
+  </div>
+
+  <!-- Reliability -->
+  <div class="glass p-8 rounded-3xl min-w-[85%] sm:min-w-0 snap-center
+              transition-all duration-500 hover:-translate-y-2">
+    <div class="flex items-center gap-4 mb-6">
+      <div class="w-14 h-14 rounded-2xl bg-yellow-500/20 flex items-center justify-center">
+        <i class="fas fa-shield-alt text-yellow-400 text-xl"></i>
+      </div>
+      <span class="text-sm uppercase tracking-widest text-[#E5E7EB]/60">
+        Reliability
+      </span>
+    </div>
+    <div class="text-4xl font-black text-yellow-400 mb-2">99%</div>
+    <p class="text-[#E5E7EB]/70 leading-relaxed">
+      On-time delivery rate with stable, secure, and well-tested
+      production deployments.
+    </p>
+  </div>
+
+  <!-- Responsiveness -->
+  <div class="glass p-8 rounded-3xl min-w-[85%] sm:min-w-0 snap-center
+              transition-all duration-500 hover:-translate-y-2">
+    <div class="flex items-center gap-4 mb-6">
+      <div class="w-14 h-14 rounded-2xl bg-purple-500/20 flex items-center justify-center">
+        <i class="fas fa-bolt text-purple-400 text-xl"></i>
+      </div>
+      <span class="text-sm uppercase tracking-widest text-[#E5E7EB]/60">
+        Responsiveness
+      </span>
+    </div>
+    <div class="text-4xl font-black text-purple-400 mb-2">24h</div>
+    <p class="text-[#E5E7EB]/70 leading-relaxed">
+      Fast response time for support, updates, and critical
+      production issues.
+    </p>
+  </div>
+
+</div>
+
+  </div>
+</section>
 
 
   
@@ -706,6 +773,7 @@ function testimonials() {
   </script>
 </body>
 </html>
+
 
 
 
