--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               transition-all duration-500 hover:-translate-y-2">
     <div class="flex items-center gap-4 mb-6">
       <div class="w-14 h-14 rounded-2xl bg-purple-500/20 flex items-center justify-center">
-        <i class="fas fa-bolt text-purple-400 text-xl"></i>
+          <i class="fas fa-clock text-3xl text-purple-400"></i>
       </div>
       <span class="text-sm uppercase tracking-widest text-[#E5E7EB]/60">
         Responsiveness
@@ -773,6 +773,7 @@ function testimonials() {
   </script>
 </body>
 </html>
+
 
 
 
