--- a/contact/index.html
+++ b/contact/index.html
@@ -86,7 +86,6 @@
       background-clip: text;
     }
     body.light .gradient-text {
-      background: linear-gradient(135deg, #06B6D4 0%, #0891b2 60%);
       -webkit-text-fill-color: transparent;
     }
     input:focus, textarea:focus, select:focus {
@@ -289,7 +288,7 @@
     <!-- Brand -->
     <div>
       <h3 class="text-2xl font-black gradient-text mb-4">CodeWithSalihu</h3>
-      <p class="text-[#E5E7EB]/70">
+      <p class="text-[#E5E7EB]/70 text-[color:var(--text-muted)]">
         Fullstack Dev crafting luxury digital experiences. Nigeria → World.
       </p>
     </div>
@@ -300,20 +299,20 @@
       <ul class="space-y-2">
         <li>
            <a href="/CodeWithSalihu/about/"
-             class="text-[#E5E7EB]/80 hover:text-[#06B6D4] transition">
+             class="text-[#E5E7EB]/80 hover:text-[#06B6D4] transition text-[color:var(--text-muted)]">
             About
           </a>
         </li>
         <li>
           <a href="/CodeWithSalihu/projects/"
-             class="text-[#E5E7EB]/80 hover:text-[#06B6D4] transition">
+             class="text-[#E5E7EB]/80 hover:text-[#06B6D4] transition text-[color:var(--text-muted)]">
             Projects
           </a>
         </li>
         <li>
          
           <a href="/CodeWithSalihu/contact/"
-             class="text-[#E5E7EB]/80 hover:text-[#06B6D4] transition">
+             class="text-[#E5E7EB]/80 hover:text-[#06B6D4] transition text-[color:var(--text-muted)]">
             Contact
           </a>
         </li>
@@ -322,7 +321,7 @@
 
     <!-- Social / Connect -->
     <div>
-      <h4 class="text-lg font-semibold text-[#06B6D4] mb-4">Connect</h4>
+      <h4 class="text-lg font-semibold text-[#06B6D4] mb-4 text-[color:var(--text-muted)]">Connect</h4>
       <div class="flex gap-4 justify-center md:justify-start">
 
         <!-- GitHub -->
@@ -356,7 +355,7 @@
   </div>
 
   <!-- Bottom -->
-  <div class="border-t border-[#E5E7EB]/20 mt-12 pt-8 text-center text-sm text-[#E5E7EB]/50">
+  <div class="border-t border-[#E5E7EB]/20 mt-12 pt-8 text-center text-sm text-[#E5E7EB]/50 text-[color:var(--text-muted)]">
     <p>© 2025 CodeWithSalihu. Built with ❤️ in Calabar. All rights reserved.</p>
   </div>
 </footer>
@@ -431,6 +430,7 @@
 
 
 </html>
+
 
 
 
