--- a/contact/index.html
+++ b/contact/index.html
@@ -166,7 +166,7 @@
       <div class="absolute bottom-0 -right-20 w-80 h-80 bg-accent-dark/10 rounded-full blur-3xl animate-float" style="animation-delay: 3s;"></div>
     </div>
     <div class="max-w-5xl mx-auto relative z-10">
-      <h1 class="text-5xl md:text-6xl lg:text-7xl font-black gradient-text mb-8">
+      <h1 class="text-5xl md:text-6xl lg:text-7xl font-black gradient-text mb-8 text-[color:var(--text-muted)]">
         Let's Connect
       </h1>
       <p class="text-xl md:text-2xl max-w-3xl mx-auto">
@@ -183,7 +183,7 @@
       <div class="space-y-10">
         <div>
           <h2 class="text-3xl font-bold gradient-text mb-6">Get in Touch</h2>
-          <p class="text-lg text-textLight/80 leading-relaxed">
+          <p class="text-lg text-textLight/80 leading-relaxed text-[color:var(--text-muted)]">
             I'm currently open for freelance work, collaborations, and full-time opportunities.<br><br>
             Based in Calabar, Nigeria 🇳🇬, working with clients worldwide.
           </p>
@@ -222,7 +222,7 @@
         </div>
 
         <div class="pt-8">
-          <p class="text-sm uppercase tracking-wider text-textLight/60 mb-4">Follow Me</p>
+          <p class="text-sm uppercase tracking-wider text-textLight/60 mb-4 text-[color:var(--text-muted)]">Follow Me</p>
           <div class="flex gap-6">
             <a href="https://github.com/salihuhassan" class="text-3xl hover:text-accent transition"><i class="fab fa-github"></i></a>
             <a href="https://x.com/verydarkblackm" class="text-3xl hover:text-accent transition"><i class="fab fa-twitter"></i></a>
@@ -430,6 +430,7 @@
 
 
 </html>
+
 
 
 
