--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           <img :src="t.image" :alt="t.name" class="w-20 h-20 rounded-full mb-4 object-cover border-2 border-[#06B6D4]">
 <p class="italic mb-4 text-[color:var(--text-main)]" x-text="t.feedback"></p>
           <h4 class="text-lg font-bold text-[#06B6D4]" x-text="t.name"></h4>
-          <span class="text-sm text-[#E5E7EB]/50" x-text="t.company"></span>
+          <span class="text-sm text-[#E5E7EB]/50 text-[color:var(--text-main)]" x-text="t.company"></span>
         </div>
       </template>
     </div>
@@ -401,7 +401,7 @@
               <img :src="t.image" :alt="t.name" class="w-20 h-20 rounded-full mb-4 object-cover border-2 border-[#06B6D4]">
 <p class="italic mb-4 text-[color:var(--text-main)]" x-text="t.feedback"></p>
               <h4 class="text-lg font-bold text-[#06B6D4]" x-text="t.name"></h4>
-              <span class="text-sm text-[#E5E7EB]/50" x-text="t.company"></span>
+              <span class="text-sm text-[#E5E7EB]/50 text-[color:var(--text-main)]" x-text="t.company"></span>
             </div>
           </div>
         </template>
@@ -554,7 +554,7 @@ function testimonials() {
   </div>
 
   <!-- Bottom -->
-    <div class="border-t border-[#E5E7EB]/20 mt-12 pt-8 text-center text-sm text-[#E5E7EB]/50 text-[color:var(--text-muted)]">
+    <div class="border-t border-[#E5E7EB]/20 mt-12 pt-8 text-center text-sm text-[#E5E7EB]/50 text-[color:var(--text-main)]">
     <p>© 2025 CodeWithSalihu. Built with ❤️ in Calabar. All rights reserved.</p>
   </div>
 </footer>
@@ -773,6 +773,7 @@ function testimonials() {
   </script>
 </body>
 </html>
+
 
 
 
