--- a/projects.html
+++ b/projects.html
@@ -178,7 +178,7 @@
             <span class="px-4 py-2 glass rounded-lg text-xs font-mono">API</span>
           </div>
           <div class="flex gap-6">
-            <a href="https://codewithsalihu.github.io/ControlHub" target="_blank" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium">
+            <a href="https://codewithsalihu.github.io/ControlHub/" target="_blank" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium">
               <i class="fas fa-external-link-alt"></i> Live Demo
             </a>
             <a href="https://github.com/CodeWithSalihu" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium">
@@ -300,6 +300,7 @@
 </body>
 
 </html>
+
 
 
 
