--- a/projects/index.html
+++ b/projects/index.html
@@ -205,7 +205,7 @@
             <span class="px-4 py-2 glass rounded-lg text-xs font-mono">API</span>
           </div>
           <div class="flex gap-6">
-            <a href="https://smartsummary.com.ng/" target="_blank" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium text-[color:var(--text-muted)]">
+            <a href="https://codewithsalihu.github.io/ControlHub/" target="_blank" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium text-[color:var(--text-muted)]">
               <i class="fas fa-external-link-alt"></i> Live Demo
             </a>
             <a href="https://github.com/CodeWithSalihu" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium text-[color:var(--text-muted)]">
@@ -230,7 +230,7 @@
             <span class="px-4 py-2 glass rounded-lg text-xs font-mono">Prisma</span>
           </div>
           <div class="flex gap-6">
-            <a href="https://www.degrandhotel.com/restaurant" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium text-[color:var(--text-muted)]">
+            <a href="https://codewithsalihu.github.io/SavannaCrown/" class="text-[#06B6D4] hover:text-white transition flex items-center gap-2 font-medium text-[color:var(--text-muted)]">
               <i class="fas fa-external-link-alt"></i> Live Demo
             </a>
             <a href="https://github.com/CodeWithSalihu" target="_blank" class="text-[#E5E7EB]/70 hover:text-[#06B6D4] transition flex items-center gap-2 font-medium text-[color:var(--text-muted)]">
@@ -370,6 +370,7 @@
 </body>
 
 </html>
+
 
 
 
